[package]
name = "topos-tce-api"
version = "0.1.0"
edition = "2021"

[dependencies]
topos-p2p = { path = "../topos-p2p" }
topos-core = { workspace = true, features = ["uci", "api"] }
topos-tce-storage = { path = "../topos-tce-storage" }

async-trait.workspace = true
async-stream.workspace = true
futures.workspace = true
hex.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tonic.workspace = true
tower.workspace = true
tracing.workspace = true
uuid.workspace = true

tonic-health = "0.8.0"
tonic-reflection = "0.6.0"

opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
pin-project = "1.0.12"

[dev-dependencies]
bytes.workspace = true
hyper.workspace = true
prost.workspace = true
test-log.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
env_logger.workspace = true
http = "0.2.8"
http-body = "0.4.5"
rstest = { workspace = true, features = ["async-timeout"] }
topos-test-sdk = { path = "../topos-test-sdk/" }

