[package]
name = "topos-tce-api"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
topos-p2p = { path = "../topos-p2p" }
topos-core = { workspace = true, features = ["uci", "api"] }
topos-metrics = { path = "../topos-metrics" }
topos-tce-storage = { path = "../topos-tce-storage" }

async-graphql-axum.workspace = true
async-graphql.workspace = true
async-stream.workspace = true
async-trait.workspace = true
axum.workspace = true
base64ct.workspace = true
futures.workspace = true
hex.workspace = true
http.workspace = true
hyper.workspace = true
prometheus-client.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio-stream.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing.workspace = true
uuid.workspace = true

tonic-health = "0.11.0"
tonic-reflection = "0.11.0"
pin-project = "1.0.12"
async-recursion = "1.0"

[dev-dependencies]
bytes.workspace = true
prost.workspace = true
test-log.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
env_logger.workspace = true
http = "0.2.8"
http-body = "0.4.5"
rstest = { workspace = true, features = ["async-timeout"] }
topos-test-sdk = { path = "../topos-test-sdk/" }
