[package]
name = "topos-tce-broadcast"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder.workspace = true
futures.workspace = true
rand.workspace = true
rand_core.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry-otlp.workspace = true

tce_transport = { package = "topos-tce-transport", path = "../topos-tce-transport"}
topos-core = { workspace = true, features = ["uci"] }
topos-p2p = { path = "../topos-p2p/"}

[dev-dependencies]
test-log.workspace = true
env_logger.workspace = true
rstest.workspace = true

topos-test-sdk = { path = "../topos-test-sdk/" }

[features]
default = []
direct = []
