[package]
name = "topos-tce-broadcast"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder.workspace = true
futures.workspace = true
lazy_static.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry.workspace = true
rand.workspace = true
rand_core.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing.workspace = true

tce_transport = { package = "topos-tce-transport", path = "../topos-tce-transport"}
topos-core = { workspace = true, features = ["uci"] }
topos-p2p = { path = "../topos-p2p/"}
topos-metrics = { path = "../topos-metrics/" }
topos-tce-storage = { path = "../topos-tce-storage/" }
topos-telemetry = { path = "../topos-telemetry/" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_futures", "async_tokio"] }
test-log.workspace = true
env_logger.workspace = true
rstest.workspace = true

topos-test-sdk = { path = "../topos-test-sdk/" }

[features]
default = []

[[bench]]
name = "tasked_double_echo"
path = "benches/task_manager_channels.rs"
harness = false