[package]
name = "topos-tce-console-subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.1", features = ["sync", "time", "macros", "tracing"] }
tonic = { version = "0.8.1", features = ["transport"] }
tracing = "0.1.36"
tracing-core = "0.1.29"
tracing-subscriber = { version = "0.3.15", features = ["env-filter", "fmt", "registry"] }

topos-tce-console-api = { path = "../topos-tce-console-api" }
tokio-stream = "0.1.9"
futures = { version = "0.3", default-features = false }
serde = "1.0.145"
serde_json = "1.0.85"
