[package]
name = "topos-tce-gatekeeper"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
libp2p.workspace = true
topos-core = { workspace = true, features = ["uci"] }
topos-p2p = { path = "../topos-p2p" }
topos-tce-transport = { path = "../topos-tce-transport" }
topos-commands = { path = "../topos-commands" }

[dev-dependencies]
rstest.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
test-log.workspace = true
env_logger.workspace = true
