[package]
name = "topos-tce-gatekeeper"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
topos-core = { workspace = true, features = ["uci"] }
topos-p2p = { path = "../topos-p2p" }
topos-commands = { path = "../topos-commands" }

[dev-dependencies]
rstest.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
test-log.workspace = true
env_logger.workspace = true
