[package]
name = "topos-tce-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
topos-core = { workspace = true, features = ["uci", "api"] }

async-stream.workspace = true
backoff.workspace = true
byteorder.workspace = true
futures.workspace = true
hex.workspace = true
hyper.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
] }
tokio-stream.workspace = true
tonic = { workspace = true, features = ["transport"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "json", "ansi", "fmt"] }
tracing.workspace = true
uuid.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
base64.workspace = true

[dev-dependencies]
topos-tce-transport = { path = "../topos-tce-transport" }
topos-tce = { path = "../topos-tce" }
rstest = { workspace = true, features = ["async-timeout"] }
test-log.workspace = true
env_logger.workspace = true
serial_test.workspace = true
byteorder = "1.4.3"
dockertest = "0.3.1"
topos-tce-storage = { path = "../topos-tce-storage" }
topos-test-sdk = { path = "../topos-test-sdk/", features=["tce"] }
