[package]
name = "topos-tce-simulation"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "tce-params-minimizer"
path = "src/main.rs"

[dependencies]
# byteorder = "1.4.3"
log = "0.4.14"

clap = { version = "3.0.10", features = ["derive", "env"] }
tokio = { version = "1.20.0", features = [
    "io-util",
    "io-std",
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
    "time",
    "sync",
] }
rand_core = "0.6.0"
rand_distr = "0.4.3"
rand = "0.8.5"
pretty_env_logger = "0.4.0"
fastapprox = "0.3.0"

# tce dependencies
# tce_api = { package = "topos-tce-api", path = "../topos-tce-api" }
tce_store = { package = "topos-tce-store", path = "../topos-tce-store" }
tce_transport = { package = "topos-tce-transport", path = "../topos-tce-transport" }

topos-tce-broadcast = { path = "../topos-tce-broadcast" }
topos-core = { git = "https://github.com/toposware/topos-core", branch = "main", features = ["uci"], version = "0.1.0" }
