[package]
name = "topos-tce-simulation"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "tce-params-minimizer"
path = "src/main.rs"

[dependencies]
clap.workspace = true
rand.workspace = true
rand_core.workspace = true
rand_distr.workspace = true
tokio.workspace = true
tracing.workspace = true

pretty_env_logger = { version = "0.4", default-features = false }

tce_transport = { package = "topos-tce-transport", path = "../topos-tce-transport" }
topos-core = { workspace = true, features = ["uci"] }
topos-tce-broadcast = { path = "../topos-tce-broadcast" }

fastapprox = "0.3.0"
