[package]
name = "topos-tce-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio-stream.workspace = true

bincode = "1.3.3"
topos-core = { workspace = true, features = ["uci"] }
rocksdb = { version = "0.19.0", optional = true }
serde_derive = "1.0.145"
once_cell = "1.15"

topos-commands = { path = "../topos-commands/" }
[features]
default = ["rocksdb", "inmemory"]
inmemory = []
rocksdb = ["dep:rocksdb"]

[dev-dependencies]
rstest.workspace = true
rand = { workspace = true, features = ["default"] }
uuid = { version = "1.2.1", features = ["v4", "serde"] }
