[package]
name = "topos-tce-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
topos-core = { workspace = true, features = ["uci", "api"] }
topos-commands = { path = "../topos-commands/" }

async-stream.workspace = true
async-trait.workspace = true
bincode.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream.workspace = true
tracing.workspace = true
once_cell.workspace = true

rocksdb = { version = "0.19.0", optional = true }
serde_derive = "1.0.145"

[dev-dependencies]
rand = { workspace = true, features = ["default"] }
rstest = { workspace = true, features = ["async-timeout"] }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
tracing.workspace = true
test-log.workspace = true
env_logger.workspace = true

topos-test-sdk = { path = "../topos-test-sdk/" }


[features]
default = ["rocksdb", "inmemory"]
inmemory = []
rocksdb = ["dep:rocksdb"]