[package]
name = "topos-tce-store"
version = "0.1.0"
edition = "2021"

[lib]
path = 'src/lib.rs'

[dependencies]
log = "0.4.14"
rocksdb = "0.18.0"

# tce dependencies
topos-core = { git = "https://github.com/Toposware/topos-core", branch = "main", features = ["uci"], version = "0.1.0" }
topos-tce-broadcast = { path = "../topos-tce-broadcast" }
bincode = "1.3.3"

[dev-dependencies]
pretty_env_logger = "0.4.0"
