[package]
name = "topos-tce-store"
version = "0.1.0"
edition = "2021"

[lib]
path = 'src/lib.rs'

[dependencies]
topos-core = { workspace = true, features = ["uci"] }
topos-tce-broadcast = { path = "../topos-tce-broadcast" }

bincode = "1.3.3"
rocksdb = "0.19.0"

[dev-dependencies]
tracing.workspace = true
